# Data-Mining-CMC

./: README.md  pyproject.toml
data/: donations.csv
notebooks/: association_rules_and_hidden_structures_in_data.ipynb  clustering_and_anomaly_detection.ipynb  forecasting.ipynb
src/: association_rules_and_hidden_structures_in_data.md  clustering_and_anomaly_detection.md  forecasting.md
